SERVER-7257 this ticket is manifesting in checkAllVersions(). this change is a small mitigation to just tell you what shard failed in checkAllVersions. So it doesn't fix the root version but should be incrementally helpful. The real solution is probably to do some sort of ShardConnectionException or something where at throw time the shard is known and its identity bundled with the error itself.